.provarCaches/00D5f000005vwGkEAI/objects/rstk__solinepo__c.object
<CustomObject>
    <description>solinepo__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__solinepo_icitem__r.rstk__icitem_item__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solinepo_dropship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Drop Ship PO to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__solinepo_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>SO_Line_Direct_Purchase_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solinepo_poline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Order Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipName>SO_Line_Direct_Purchase_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solinepo_qtyorder__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinepo_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinepo_soconfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product Component</label>
        <referenceTo>rstk__soconfig__c</referenceTo>
        <relationshipName>SO_Line_Direct_Purchase_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solinepo_soline__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipName>SO_Line_Direct_Purchase_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__solinepo_soorddmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product Component</label>
        <referenceTo>rstk__soorddmd__c</referenceTo>
        <relationshipName>SO_Line_Direct_Purchase_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Direct Purchase Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>